--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My WebXR Page</title>
+    <title>WebXR with Babylon.js</title>
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <style>
+        body { margin: 0; padding: 0; }
+        #renderCanvas { width: 100%; height: 100%; touch-action: none; }
+    </style>
 </head>
 <body>
-    <script src="code.js"></script>
+    <canvas id="renderCanvas"></canvas>
+    <script>
+        window.addEventListener('DOMContentLoaded', function () {
+            var canvas = document.getElementById('renderCanvas');
+            var engine = new BABYLON.Engine(canvas, true);
+            var createScene = async function () {
+                var scene = new BABYLON.Scene(engine);
+                var camera = new BABYLON.ArcRotateCamera("Camera", -Math.PI / 2,  Math.PI / 2, 5, BABYLON.Vector3.Zero(), scene);
+                camera.attachControl(canvas, true);
+                camera.inputs.attached.mousewheel.detachControl(canvas);
+
+                var xrHelper = await scene.createDefaultXRExperienceAsync({floorMeshes: [polygon]});
+
+                var hitTestObservable = xrHelper.baseExperience.featuresManager.enableFeature(BABYLON.WebXRHitTest, 'latest', {hitTestType: BABYLON.WebXRHitTest.HIT_TEST_TYPE_PLANE});
+                hitTestObservable.onHitTestResultObservable.add((results) => {
+                    if (results.length) {
+                        var hit = results[0];
+                        // hit.position, hit.xrHitResult - 이를 사용하여 히트 테스트 결과 처리
+                    }
+                });
+
+                var gestureManager = new BABYLON.WebXRAbstractMotionControllerPointerSelection(scene, xrHelper.input);
+                gestureManager.onGestureObservable.add((eventData) => {
+                    switch (eventData.eventType) {
+                        case BABYLON.WebXRControllerPointerSelection.GESTURE_EVENT_TYPES.TAP:
+                            // 탭 제스처 처리
+                            break;
+                        case BABYLON.WebXRControllerPointerSelection.GESTURE_EVENT_TYPES.DOUBLE_TAP:
+                            // 더블 탭 제스처 처리
+                            break;
+                        // 추가적인 제스처 이벤트 처리
+                    }
+                });
+
+                return scene;
+            };
+            var scene = createScene();
+            engine.runRenderLoop(function () {
+                if (scene) {
+                    scene.render();
+                }
+            });
+            window.addEventListener('resize', function () {
+                engine.resize();
+            });
+        });
+    </script>
 </body>
 </html>
