fix error index.html
Uncaught TypeError: scene.render is not a function: 이 오류는 scene.render가 함수가 아니라는 것을 나타냅니다. 이는 scene 객체가 Babylon.js의 Scene 인스턴스가 아니라는 것을 의미합니다. createScene 함수가 Scene 인스턴스를 반환하도록 확인해야 합니다.
webXREnterExitUI.ts:126 Uncaught (in promise) Error: WebXR can only be served over HTTPS: 이 오류는 WebXR이 HTTPS를 통해서만 제공될 수 있다는 것을 나타냅니다. 이는 보안 상의 이유로, WebXR은 HTTPS를 통해 제공되는 페이지에서만 작동합니다. 로컬 개발을 위해 localhost에서는 예외로 허용되지만, 다른 도메인에서는 HTTPS가 필요합니다.
content.js:7 Uncaught TypeError: Cannot read properties of undefined (reading '0'): 이 오류는 undefined 객체의 속성을 읽으려고 시도했다는 것을 나타냅니다. 이는 해당 객체가 아직 정의되지 않았거나 null이라는 것을 의미합니다.

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 
                 return scene;
             };
-            var scene = createScene();
-            engine.runRenderLoop(function () {
-                if (scene) {
-                    scene.render();
-                }
-            });
-            window.addEventListener('resize', function () {
-                engine.resize();
+            createScene().then(function(scene) {
+                engine.runRenderLoop(function () {
+                    if (scene) {
+                        scene.render();
+                    }
+                });
+                window.addEventListener('resize', function () {
+                    engine.resize();
+                });
             });
         });
     </script>
