--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 camera.attachControl(canvas, true);
                 camera.inputs.attached.mousewheel.detachControl(canvas);
 
-                var xrHelper = await scene.createDefaultXRExperienceAsync();
+                var xrHelper = await scene.createDefaultXRExperienceAsync({optionalFeatures: true});
 
                 var hitTestObservable = xrHelper.baseExperience.featuresManager.enableFeature(BABYLON.WebXRHitTest, 'latest', {hitTestType: BABYLON.WebXRHitTest.HIT_TEST_TYPE_PLANE});
                 hitTestObservable.onHitTestResultObservable.add((results) => {
